Revert "refactor: resolve SonarQube code smells by converting Stream collection to toList() and using assertThrows, bump version to 1.0.9"
This reverts commit 0404b233ec1ff8b5c52b9eb135a986c65f645d21.